--- a/week4/css_file/homework4.css
+++ b/week4/css_file/homework4.css
@@ -1,47 +1,44 @@
- .container{
-    display: flex;
-  }
-  
-  .container div {
-    flex: 1;
-  }
+.container{
+  display: flex;
+}
+
+.container div {
+  flex: 1;
+}
+
+  body {
+    background-color: black;
+    margin-top: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 5%;
+}
 
   #example1 {
-    margin-block: 100px;
-    border-left: 2px solid white;
-    border-right: 2px solid white;
+    text-align: center;
     color: white;
-    text-align: center
-  
-  
-
- 
-  
+    border-left: 3px solid white;
+    border-right: 3px solid white;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    padding-left: 8%;
+    padding-right: 8%;
     }
 
-  #example2 {
-    margin-block: 100px;
-    border-right: 2px solid white;
-    margin-left: 7.5%;
-    margin-right: 7.5%;
+    #example2 {
+      border-right: 3px solid white;
+      padding-left: 3%;
+      padding-right: 3%;
+      width: fit-content;
     }
-
-    body {
-      background-color: black;
-      margin-left: 100dp;
-      margin-right: 100dp;
-      margin-bottom: 100dp;
-      margin-top: 100dp;
-  }
   
   h1 {
-    font-size: 50px;
-    font-family: 'Playfair Display', serif;
-}
-
-p {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 22px;
-}
-   
+      font-size: 50px;
+      font-family: 'Playfair Display', serif;
+  }
+  
+  p {
+      font-family: 'Open Sans', sans-serif;
+      font-size: 22px;
+  }  
    
