--- a/week4/css_file/homework5.css
+++ b/week4/css_file/homework5.css
@@ -1,112 +1,48 @@
-.container{
-    display: flex;
-    
-  }
-  
-  .container div {
-    flex: 1;
-  }
-  .container_text{
-    display: flex;
-  }
-  
-  .container_text{
-    flex: 1;
-  }
-  
-  #heading1 {
-    border: solid black 8px;
-    border-top: none;
-    text-align: center;
-    padding: 1px;
-    margin-left: 450px;
-    margin-right: 450px;
-    margin-bottom: 100px;
-    font-family: 'Poppins', sans-serif;
-    
-    }
-  
-    #picture1 {
-        background-image: url(/week4/img/picture_homework5.png);
-        background-repeat: no-repeat;
-        margin-left: 20px;
-        height: 200px;
-        background-position: center;
-        margin: 20;
-        background-size: contain;
-    }
 
-    #picture2 {
-        background-image: url(/week4/img/picture_homework5.1.png);
-        background-repeat: no-repeat;
-        margin-left: 20px;
-        height: 200px;
-        background-position: center;
-        margin: 20;
-        background-size: contain;
-      }
+.container1 {
+  display: flex;
+  margin-right: 10%;
+}
 
-      #picture3 {
-        background-image: url(/week4/img/picture_homework5.2.png);
-        background-repeat: no-repeat;
-        margin-left: 20px;
-        height: 200px;
-        background-position: center;
-        margin: 20;
-        background-size: contain;
-    
-      }
+#example1 {
+  text-align: left;
+  color: white;
+  margin-left: 5%;
+  margin-top: 10%;
+  padding-right: 30px;
+}
+
+#text1 {
+  text-align: left;
+  color: white;
+  margin-left: 2%;
+  margin-top: 10%;
+}
+
+body {
+  background-color: black;
+}
+
+p{
+  border-bottom: solid white 2.5px;
+  padding-bottom: 15px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
   
-      #text1{
-        font-size: smaller;
-        text-align: center;
-        margin-top: 10px;
-        font-size: 20px;
-        margin-left: 100px;
-        margin-right: 100px;
-        font-family: 'Questrial', sans-serif;
-      }
-      #text2{
-        font-size: smaller;
-        text-align: center;
-        margin-top: 10px;
-        font-size: 20px;
-        margin-left: 100px;
-        margin-right: 100px;
-        font-family: 'Questrial', sans-serif;
-      }
-      #text3{
-        font-size: smaller;
-        text-align: center;
-        margin-top: 10px;
-        font-size: 20px;
-        margin-left: 100px;
-        margin-right: 100px;
-        font-family: 'Questrial', sans-serif;
-      }
+}
 
-      h1 {
-      font-size: 50px;
-      }
-  
-      h2 {
-        font-size: 20px;
-        text-align: center;
-        font-family: 'Merriweather Sans', sans-serif;
-        
-      } 
+h2 {
+  color: white;
+  font-size: 35px;
+  font-family: 'Playfair Display', serif;
+}
 
-      h3 {
-        font-size: 20px;
-        text-align: center;
-        font-family: 'Merriweather Sans', sans-serif;
+h1 {
+  color: white;
+  font-size: 45px;
+  font-family: 'Playfair Display', serif;
+  width: 250px;
+}
 
-      }
 
-      h4 {
-        font-size: 20px;
-        text-align: center;
-        font-family: 'Merriweather Sans', sans-serif;
-        
-      }
- 
+
