changing png to jpg

--- a/week4/cssfile/box_model2.style.css
+++ b/week4/cssfile/box_model2.style.css
@@ -8,7 +8,7 @@
   }
 
   #example2 {
-    background-image: url(../img/Android-Logo-2008.png);
+    background-image: url(../img/android_logo_2008.png);
     border: 5px solid red;
     width: 200px;
     margin: 20;
