--- a/week4/cssfile/homework2.css
+++ b/week4/cssfile/homework2.css
@@ -26,7 +26,7 @@
     }
   
     #picture1 {
-        background-image: url(/week4/img/picture_homework2.png);
+        background-image: url(/week4/img/picturehomework2.jpg);
         background-repeat: no-repeat;
         margin-left: 20px;
         height: 200px;
@@ -36,7 +36,7 @@
     }
 
     #picture2 {
-        background-image: url(/week4/img/picture_homework2.1.png);
+        background-image: url(/week4/img/picturehomework2.1.jpg);
         background-repeat: no-repeat;
         margin-left: 20px;
         height: 200px;
@@ -46,7 +46,7 @@
       }
 
       #picture3 {
-        background-image: url(/week4/img/picture_homework2.2.png);
+        background-image: url(/week4/img/picturehomework2.2.jpg);
         background-repeat: no-repeat;
         margin-left: 20px;
         height: 200px;
