--- a/week5/cssfile/index.css
+++ b/week5/cssfile/index.css
@@ -41,22 +41,41 @@
     display: flex;
 }
 
-/* Row */
+
 .row {
     display: flex;
 }
+.row1{
+    display: flex;
+}
 
-/* Column */
+.row2{
+    display: flex;
+    justify-content: center;
+}
+
 .column {
     width: 33.33%;
 }
 
-#column1 {
-    width: 25%;
+.column2 {
+    width: 100%;
+    text-align: center;
 }
 
-/* Responsive layout - makes the three */
-@media screen and (max-width: 600px) {
+#column1 {
+    width: 44.44%;
+}
+
+#h2 {
+  text-align: center;
+}
+
+
+
+
+
+@media screen and (max-width: 900px) {
     .row {
         flex-direction: column;
     }
@@ -66,22 +85,35 @@
     }
 }
 
-/* Row */
-.row {
-    display: flex;
-  }
-  
-  /* Row */
-  .column {
-    width: 33.33%;
-  }
-  
-  /* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
-  @media screen and (max-width: 600px) {
-    .column {
-      width: 100%;
-    }
-  }
 
-  
+
+
+@media screen and (max-width: 500px) {
+    .row1 {
+        flex-direction: column;
+    }
+
+    .column2 {
+        width: 100%;
+    }
+}
+
+
+
+
+
+@media screen and (max-width: 300px) {
+    .row2 {
+        flex-direction: column;
+    }
+
+    .column3 {
+        width: 100%;
+    }
+}
+
+
+
+
+
   
