--- a/week4/cssfile/box_model2.style.css
+++ b/week4/cssfile/box_model2.style.css
@@ -1,5 +1,5 @@
 #example1 {
-    background-image: url(../img/background_image.jpg);
+    background-image: url(/week4/img/backgroundimage.jpg);
     border: 5px solid red;
     width: 200px;
     margin: 20;
@@ -8,7 +8,7 @@
   }
 
   #example2 {
-    background-image: url(../img/android_logo_2008.png);
+    background-image: url(/week4/img/androidlogo2008.png);
     border: 5px solid red;
     width: 200px;
     margin: 20;
