--- a/week4/cssfile/box_model2.style.css
+++ b/week4/cssfile/box_model2.style.css
@@ -8,7 +8,7 @@
   }
 
   #example2 {
-    background-image: url(/week4/img/androidlogo2008.png);
+    background-image: url(/week4/img/bitcoin.jpg);
     border: 5px solid red;
     width: 200px;
     margin: 20;
