--- a/week5/cssfile/homework3.css
+++ b/week5/cssfile/homework3.css
@@ -16,10 +16,11 @@
 }
 
 .topnav {
+    margin: auto;
     display: flex;
     background-color: #333;
     justify-content: space-between;
-    width: 100%;
+    max-width: 1024px;
 }
 
 .topnav a {
@@ -50,7 +51,12 @@
     display: none;
 }
 
-
+.container2 {
+    display: flex;
+    max-width: 1024px;
+    margin: auto;
+    justify-content: center;
+}
 
 #text {
     width: 80%;
@@ -75,6 +81,21 @@
     background-color: #ddd;
     color: black;
 }
+
+.row {
+    max-width: 1024px;
+    display: flex;
+    margin: auto;
+    justify-content: space-around;
+
+}
+
+.row h4 {
+    display: flex;
+    border: solid black 2.5px;
+    padding: 50px;
+}
+
 
 .footer {
     text-align: center;
