--- a/week6/cssfile/exercise2.css
+++ b/week6/cssfile/exercise2.css
@@ -1,13 +1,38 @@
+.item1 {
+  grid-area: logo;
+}
 
-.item1 { grid-area: logo; }
-.item2 { grid-area: menu; }
-.item3 { grid-area: image; }
-.item4 { grid-area: feat1; }
-.item5 { grid-area: feat2; }
-.item6 { grid-area: feat3; }
-.item7 { grid-area: sidebar; }
-.item8 { grid-area: textcontent; }
-.item9 { grid-area: footer; }
+.item2 {
+  grid-area: menu;
+}
+
+.item3 {
+  grid-area: image;
+}
+
+.item4 {
+  grid-area: feat1;
+}
+
+.item5 {
+  grid-area: feat2;
+}
+
+.item6 {
+  grid-area: feat3;
+}
+
+.item7 {
+  grid-area: sidebar;
+}
+
+.item8 {
+  grid-area: textcontent;
+}
+
+.item9 {
+  grid-area: footer;
+}
 
 .grid-container {
   display: grid;
@@ -22,14 +47,54 @@
   padding: 10px;
 }
 
-.grid-container > div {
+.grid-container>div {
   background-color: rgba(255, 255, 255, 0.8);
   text-align: center;
   padding: 20px 0;
   font-size: 30px;
 }
 
-.phonetext{
-    justify-content: right;
-    margin-top: 5px;
+.topnav {
+  display: flex;
+  background-color: #333;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.topnav a {
+  color: #f2f2f2;
+  text-align: center;
+  padding: 10px 10px;
+  text-decoration: none;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+#travel {
+  font-size: 16px;
+}
+
+.topnav2 {
+  background-color: #333;
+  width: 100%;
+  display: grid;
+}
+
+.topnav2 a {
+  color: #f2f2f2;
+  text-align: center;
+  padding: 10px 10px;
+  text-decoration: none;
+}
+
+.topnav2 a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.text{
+  font-size: 25px;
 }
