--- a/week6/cssfile/exercise1.css
+++ b/week6/cssfile/exercise1.css
@@ -86,6 +86,13 @@
  border: 3px dotted white;
 }
 
+.arrow{
+    position: absolute;
+    top: 0;
+    right: 5px;
+    padding: 20px;
+}
+
 p1{
     color: red;
 }
