--- a/week6/cssfile/homework1.css
+++ b/week6/cssfile/homework1.css
@@ -334,3 +334,83 @@ body {
 #contentmarketing {
     text-align: center;
 }
+
+.backimg4 {
+    background-color: rgb(236, 234, 255);
+}
+
+.mainpricing {
+    padding: 70px;
+    position: relative;
+    display: flex;
+    margin-top: -100px;
+}
+
+.headp {
+    text-align: center;
+    font-size: 25px;
+}
+
+#pricing {
+    text-align: center;
+    padding-top: 35px;
+
+}
+
+#ourpricing {
+    text-align: center;
+    font-size: 40px;
+    margin-top: 10px;
+}
+
+.price {
+    margin-top: 40px;
+}
+
+.btnprice {
+    font-size: 25px;
+    font-weight: bold;    
+    color: blue;
+}
+
+.buttondetail1 {
+    margin-top: 40px;
+
+}
+
+.btndetails {
+    position: absolute;
+    background-image: url(/week6/img/Rectangle8@2x.png);
+    right: 670px;
+    bottom: 110px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 40px;
+    width: 150px;
+    text-decoration: none;
+    font-size: 18px;
+    color: white;
+    padding-top: 5px;
+}
+
+.btndetails1 {
+    background-color: white;
+    border: 1px solid blue;
+    border-radius: 32px;
+    padding: 10px 30px;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+.box2 {
+    margin-top: 50px;
+    height: 320px;
+    box-shadow: 0px 8px 15px rgba(48, 47, 47, 0.1);
+    border-radius: 12px;
+    padding: 30px;
+    background-color: white;
+    flex: 1;
+    margin-left: 45px;
+    margin-right: 45px;
+    text-align: center;
+}
