--- a/week6/cssfile/homework1.css
+++ b/week6/cssfile/homework1.css
@@ -375,8 +375,8 @@ body {
 }
 
 .buttondetail1 {
-    margin-top: 40px;
-
+    margin-top: 50px;
+   
 }
 
 .btndetails {
@@ -399,6 +399,7 @@ body {
     border: 1px solid blue;
     border-radius: 32px;
     padding: 10px 30px;
+    color: black;
     text-decoration: none;
     font-size: 18px;
 }
