--- a/week7/cssfile/exercise3.css
+++ b/week7/cssfile/exercise3.css
@@ -1,10 +1,10 @@
-body{
-
+body {
+    color: #009900;
 }
 
 .container {
     position: relative;
-    background-color: aqua;
+    background-color: #ccffcc;
     margin: auto;
     width: 750px;
 }
@@ -16,7 +16,7 @@ body{
 
 }
 
-.email{
+.email {
     display: flex;
 
 }
