--- a/assignment/cssfile/assignment1.css
+++ b/assignment/cssfile/assignment1.css
@@ -1,5 +1,5 @@
 body {
-    width: 1440px;
+    max-width: 1440px;
     margin: auto;
 }
 
@@ -8,6 +8,12 @@ body {
     align-items: center;
     gap: 30px;
     background-color: #E3FDFD;
+}
+
+
+.logo {
+    margin-left: 25px;
+    margin-top: 5px;
 }
 
 .topnav {
@@ -26,11 +32,11 @@ body {
 }
 
 .container1 {
-    min-height: 628px;
     display: flex;
     justify-content: space-between;
-    padding: 10px 0px 0px 16px;
+    padding: 10px 16px;
     background-color: #CBF1F5;
+    direction: rtl;
 }
 
 
@@ -43,6 +49,11 @@ body {
     margin-left: 3%;
     font-family: 'Ubuntu', sans-serif;
     font-size: 32px;
+    text-align: left;
+}
+
+.word {
+    font-size: 28px;
 }
 
 .sidebar {
@@ -52,14 +63,101 @@ body {
     margin-top: 55px;
 }
 
+.icon {
+    display: none;
+}
 
 .face {
-    width: 30%;
+    padding: 20px;
 }
+
+@media screen and (max-width: 600px) {
+    .topnav a {
+        display: none;
+    }
+
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .topnav.responsive {
+        position: relative
+    }
+
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+}
+
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.overlay a:hover,
+.overlay a:focus {
+    color: #f1f1f1;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+    .overlay a {
+        font-size: 20px
+    }
+
+    .overlay .closebtn {
+        font-size: 40px;
+        top: 15px;
+        right: 35px;
+    }
+}
+
+
 
 .container2 {
     border: rgba(113, 201, 206, 0.6) solid 0.5px;
-    max-height: 1176px;
     background: rgba(113, 201, 206, 0.6);
 }
 
@@ -82,7 +180,6 @@ body {
 
 .box1 {
     flex: 1;
-    height: 400px;
     background-color: #CBF1F5;
     padding: 10px;
 }
@@ -91,19 +188,23 @@ body {
 .box1 h5 {
     font-family: 'Rubik', sans-serif;
     text-align: center;
-    font-size: 2vw;
+    font-size: 26px;
     color: #5B47FF;
 }
 
 .box1 p {
     font-family: 'Rubik', sans-serif;
     text-align: center;
-    font-size: 1.5vw;
+    font-size: 20px;
     color: rgba(91, 71, 255, 0.8);
 }
 
+#java {
+    margin-top: 70px;
+}
+
 #web {
-    margin-top: 5vw;
+    padding-top: 30px;
 }
 
 .bigbox2 {
@@ -118,7 +219,6 @@ body {
 
 .box2 {
     flex: 1;
-    height: 400px;
     background-color: #CBF1F5;
     padding: 10px;
 }
@@ -127,49 +227,57 @@ body {
 .box2 h5 {
     font-family: 'Rubik', sans-serif;
     text-align: center;
-    font-size: 2vw;
+    font-size: 26px;
     color: #5B47FF;
 }
 
 .box2 p {
     font-family: 'Rubik', sans-serif;
     text-align: center;
-    font-size: 1.5vw;
+    font-size: 20px;
     color: rgba(91, 71, 255, 0.8);
 }
 
+#artificial {
+    margin-top: 70px;
+}
+
+#community {
+    margin-top: 70px;
+}
+
 .btndetails0 {
-    margin-top: 4.8vw;
+    margin-top: 100px;
     margin-bottom: 40px;
     text-align: center;
 }
 
 .btndetails1 {
-    margin-top: 5.7vw;
+    margin-top: 125px;
     margin-bottom: 40px;
     text-align: center;
 }
 
 .btndetails2 {
-    margin-top: 3.5vw;
+    margin-top: 105px;
     margin-bottom: 40px;
     text-align: center;
 }
 
 .btndetails3 {
-    margin-top: 6.8vw;
+    margin-top: 80px;
     margin-bottom: 40px;
     text-align: center;
 }
 
 .btndetails4 {
-    margin-top: 6.8vw;
+    margin-top: 80px;
     margin-bottom: 40px;
     text-align: center;
 }
 
 .btndetails5 {
-    margin-top: 3vw;
+    margin-top: 80px;
     margin-bottom: 40px;
     text-align: center;
 }
@@ -188,9 +296,7 @@ body {
 .container3 {
     position: relative;
     border: #CBF1F5 solid 0.5px;
-    position: relative;
-    max-width: 1440px;
-    min-height: 1390px;
+    height: 1390px;
     background: #CBF1F5;
 
 }
@@ -226,13 +332,13 @@ body {
 
 .guamusang4 {
     position: absolute;
-    top: 55%;
+    top: 57%;
     left: 14.5%;
 }
 
 .guamusang3 {
     position: absolute;
-    top: 63%;
+    top: 62%;
     left: 38.5%;
 }
 
@@ -242,47 +348,136 @@ body {
     left: 62.5%;
 }
 
+@media screen and (max-width: 600px) {
+    .container1 {
+        display: block;
+    }
+
+    .header {
+        width: 100%;
+    }
+
+    .face {
+        display: flex;
+        justify-content: center;
+        margin: auto;
+
+    }
+
+    .sidebar {
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+        gap: 70px;
+    }
+
+    .text1 {
+        margin: auto;
+        text-align: center;
+    }
+
+    .text1 p {
+        font-size: 36px;
+    }
+
+    .word {
+        font-size: 26px;
+    }
+
+    .topnav {
+        margin-left: 55%;
+    }
+
+    .container2 {
+        display: block;
+    }
+
+    .bigbox1 {
+        flex-direction: column;
+        margin: auto;
+    }
+
+    .bigbox2 {
+        flex-direction: column;
+        margin: auto;
+    }
+
+    .container3 {
+        height: auto;
+    }
+
+    .guabox {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .guabox img {
+        width: 50%;
+        padding: 10px;
+        margin: auto;
+        position: unset;
+    }
+
+    .boxbron{
+        display: block;
+        flex-direction: column;
+        margin: auto;
+    }
+
+    .homework{
+        display: block;
+        flex-direction: column;
+        margin: auto;
+    }
+
+    .topnav1{
+        height: auto;
+        display: block;
+        flex-direction: column;
+        margin: auto;
+    }
+}
+
 .container4 {
-    position: relative;
     border: rgba(113, 201, 206, 0.6) solid 0.5px;
-    height: 830px;
     background: rgba(113, 201, 206, 0.6);
 }
 
-.container4 h3 {
+.container4 h4 {
     font-family: 'Rubik', sans-serif;
     text-align: center;
     font-size: 54px;
 }
 
 
+.container4 h3 {
+    margin-top: 25%;
+    font-family: 'Rubik', sans-serif;
+    font-size: 24px;
+}
+
 .lebron {
     padding-left: 50px;
 }
 
+
 .textbron {
     font-family: 'Rubik', sans-serif;
-    margin-top: 5vw;
-    padding-left: 4.5vw;
+    margin-top: 6%;
+    padding-left:2.5%;
     font-size: 34px;
 }
 
-.textnba {
-    position: absolute;
-    top: 70%;
-    left: 38%;
-}
-
-.textnba h4 {
+.textbron h4 {
     font-family: 'Rubik', sans-serif;
-    font-size: 22px;
+    margin-top: 26%;
+    font-size: 24px;
 }
 
-.textnba p {
+.textbron p{
     font-family: 'Rubik', sans-serif;
-    font-size: 16px;
+    font-size: 14px;
 }
-
 
 .boxbron {
     display: flex;
@@ -310,7 +505,6 @@ body {
 }
 
 .container6 {
-    height: 300px;
     background: #363434;
 }
 
@@ -338,15 +532,13 @@ body {
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 20px;
-    margin: 4px 2px;
-    cursor: pointer;
 }
 
 .sidebar1 {
     margin-top: 40px;
     justify-content: center;
+    padding: 30px;
     display: flex;
     gap: 100px;
 }
@@ -369,64 +561,4 @@ body {
     color: black;
     margin-top: 15px;
     text-decoration: none;
-}
-
-@media screen and (max-width: 1155px) {
-    .box1 {
-        height: fit-content;
-        margin: 15px;
-    }
-
-    .box2 {
-        height: fit-content;
-        margin: 5px;
-    }
-}
-
-@media screen and (max-width: 600px) {
-
-    .container1 {
-        display: block;
-        width: 50%;
-    }
-
-    .sidebar {
-        flex-direction: row;
-        position: absolute;
-        top: 92%;
-        left: 30%;
-    }
-
-    .text1 {
-        flex-direction: column;
-        font-size: 20px;
-        margin: auto;
-
-    }
-    .text1 h3 {
-        flex-direction: column;
-        font-size: 20px;
-
-    }
-    .text1 p{
-        flex-direction: column;
-        font-size: 20px;
-
-    }
-
-.face {
-    text-align: center;
-}
-
-.container2 {
-    width: 50%;
-}
-
-.bigbox1{
-    display: block;
-}
-.bigbox2{
-    display: block;
-}
-
 }
