--- a/assignment/cssfile/aboutme.css
+++ b/assignment/cssfile/aboutme.css
@@ -32,18 +32,21 @@ body {
 }
 
 .container1 {
-    display: flex;
-    justify-content: space-between;
     padding: 10px 16px;
     background-color: #CBF1F5;
-    direction: rtl;
 }
 
+.text1 h3 {
+    font-size: 27px;
+    font-family: 'Ubuntu', sans-serif;
+}
 
 .text1 p {
-    font-size: 57px;
+    font-size: 27px;
     font-family: 'Rubik', sans-serif;
 }
+
+
 
 .text1 {
     margin-left: 3%;
@@ -52,23 +55,20 @@ body {
     text-align: left;
 }
 
-.word {
-    font-size: 28px;
+.boxflex {
+    display: flex;
+    margin-bottom: 3%;
 }
 
-.sidebar {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: 55px;
+.word {
+    margin: auto;
+    margin-left: 2%;
+    font-size: 20px;
 }
+
 
 .icon {
     display: none;
-}
-
-.face {
-    padding: 20px;
 }
 
 @media screen and (max-width: 600px) {
@@ -160,7 +160,7 @@ body {
     border: rgba(113, 201, 206, 0.6) solid 0.5px;
     background: rgba(113, 201, 206, 0.6);
 }
-    
+
 #heading {
     font-family: 'Rubik', sans-serif;
     padding-top: 10px;
@@ -184,6 +184,11 @@ body {
     padding: 10px;
 }
 
+.box1 img {
+    display: flex;
+    margin: auto;
+}
+
 
 .box1 h5 {
     font-family: 'Rubik', sans-serif;
@@ -197,14 +202,6 @@ body {
     text-align: center;
     font-size: 20px;
     color: rgba(91, 71, 255, 0.8);
-}
-
-#java {
-    margin-top: 70px;
-}
-
-#web {
-    padding-top: 30px;
 }
 
 .bigbox2 {
@@ -223,6 +220,11 @@ body {
     padding: 10px;
 }
 
+.box2 img {
+    display: flex;
+    margin: auto;
+}
+
 
 .box2 h5 {
     font-family: 'Rubik', sans-serif;
@@ -238,60 +240,6 @@ body {
     color: rgba(91, 71, 255, 0.8);
 }
 
-#artificial {
-    margin-top: 70px;
-}
-
-#community {
-    margin-top: 70px;
-}
-
-.btndetails0 {
-    margin-top: 100px;
-    margin-bottom: 40px;
-    text-align: center;
-}
-
-.btndetails1 {
-    margin-top: 125px;
-    margin-bottom: 40px;
-    text-align: center;
-}
-
-.btndetails2 {
-    margin-top: 105px;
-    margin-bottom: 40px;
-    text-align: center;
-}
-
-.btndetails3 {
-    margin-top: 80px;
-    margin-bottom: 40px;
-    text-align: center;
-}
-
-.btndetails4 {
-    margin-top: 80px;
-    margin-bottom: 40px;
-    text-align: center;
-}
-
-.btndetails5 {
-    margin-top: 80px;
-    margin-bottom: 40px;
-    text-align: center;
-}
-
-.details {
-    font-family: 'Rubik', sans-serif;
-    padding: 10px 40px;
-    text-decoration: none;
-    background: #71C9CE;
-    color: white;
-    font-weight: bold;
-    width: fit-content;
-
-}
 
 .container3 {
     position: relative;
@@ -314,61 +262,36 @@ body {
     text-align: center;
 }
 
-.guamusang {
+.melawi {
     position: absolute;
-    left: 14.5%;
+    left: 22%;
 }
 
-.guamusang1 {
+.kualakoh {
     position: absolute;
-    left: 62.5%;
+    left: 53.5%;
+}
+
+.siti {
+    position: absolute;
+    top: 62.5%;
+    left: 22%;
+}
+
+.kite {
+    position: absolute;
+    top: 72.5%;
+    left: 53.5%;
 }
 
 
-.guamusang2 {
-    position: absolute;
-    left: 38.5%;
-}
-
-.guamusang4 {
-    position: absolute;
-    top: 57%;
-    left: 14.5%;
-}
-
-.guamusang3 {
-    position: absolute;
-    top: 62%;
-    left: 38.5%;
-}
-
-.guamusang5 {
-    position: absolute;
-    top: 47%;
-    left: 62.5%;
-}
-
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 600px) {
     .container1 {
         display: block;
     }
 
     .header {
         width: 100%;
-    }
-
-    .face {
-        display: flex;
-        justify-content: center;
-        margin: auto;
-
-    }
-
-    .sidebar {
-        display: flex;
-        justify-content: center;
-        flex-direction: row;
-        gap: 70px;
     }
 
     .text1 {
@@ -418,19 +341,19 @@ body {
         position: unset;
     }
 
-    .boxbron{
+    .secondary {
         display: block;
         flex-direction: column;
         margin: auto;
     }
 
-    .homework{
+    .homework {
         display: block;
         flex-direction: column;
         margin: auto;
     }
 
-    .footer{
+    n .topnav1 {
         height: auto;
         display: block;
         flex-direction: column;
@@ -456,35 +379,16 @@ body {
     font-size: 24px;
 }
 
-.lebron {
-    padding-left: 50px;
-}
-
-
-.textbron {
-    font-family: 'Rubik', sans-serif;
-    margin-top: 6%;
-    padding-left:2.5%;
-    font-size: 34px;
-}
-
-.textbron h4 {
-    font-family: 'Rubik', sans-serif;
-    margin-top: 26%;
-    font-size: 24px;
-}
-
-.textbron p{
-    font-family: 'Rubik', sans-serif;
-    font-size: 14px;
-}
-
-.boxbron {
+.secondary {
     display: flex;
+    justify-content: space-around;
+    height: auto;
 }
 
-.container5 {
-    margin-top: 50px;
+.textschool {
+    font-family: 'Rubik', sans-serif;
+    padding-left: 2.5%;
+    font-size: 24px;
 }
 
 .homework {
@@ -492,16 +396,13 @@ body {
     justify-content: space-around;
 }
 
-.three {
-    font-family: 'Rubik', sans-serif;
-    font-size: 46px;
-    text-align: center;
+.container5 {
+    background: #CBF1F5;
 }
 
-.three p {
-    font-family: 'Rubik', sans-serif;
-    font-size: 20px;
-    text-align: center;
+.textuni {
+    display: flex;
+    justify-content: space-around;
 }
 
 .container6 {
@@ -547,7 +448,7 @@ body {
     display: flex;
 }
 
-.footer {
+.topnav1 {
     font-family: 'Rubik', sans-serif;
     display: flex;
     flex: 1;
@@ -557,7 +458,7 @@ body {
     background: #CBF1F5;
 }
 
-.footer a {
+.topnav1 a {
     color: black;
     margin-top: 15px;
     text-decoration: none;
