--- a/assignment/cssfile/assignment1.css
+++ b/assignment/cssfile/assignment1.css
@@ -159,7 +159,7 @@ body {
     background: rgba(113, 201, 206, 0.6);
     padding: 10px;
 }
-    
+
 #heading {
     font-family: 'Rubik', sans-serif;
     padding-top: 10px;
@@ -417,19 +417,28 @@ body {
         position: unset;
     }
 
-    .boxbron{
+    .boxbron {
         display: block;
         flex-direction: column;
         margin: auto;
     }
 
-    .homework{
+    .lebron {
+        margin: auto;
+    }
+
+    .textbron {
+        font-size: 14px;
+    }
+
+
+    .homework {
         display: block;
         flex-direction: column;
         margin: auto;
     }
 
-    .footer{
+    .footer {
         height: auto;
         display: block;
         flex-direction: column;
@@ -463,17 +472,17 @@ body {
 .textbron {
     font-family: 'Rubik', sans-serif;
     margin-top: 6%;
-    padding-left:2.5%;
+    padding-left: 2.5%;
     font-size: 34px;
 }
 
-.textbron h4 {
+.textbron h3 {
     font-family: 'Rubik', sans-serif;
     margin-top: 26%;
     font-size: 24px;
 }
 
-.textbron p{
+.textbron p {
     font-family: 'Rubik', sans-serif;
     font-size: 14px;
 }
