--- a/assignment/cssfile/assignment1.css
+++ b/assignment/cssfile/assignment1.css
@@ -23,7 +23,6 @@ body {
     justify-content: space-around;
     font-size: 20px;
     text-align: center;
-
 }
 
 .topnav a {
@@ -38,7 +37,6 @@ body {
     background-color: #CBF1F5;
     direction: rtl;
 }
-
 
 .text1 p {
     font-size: 57px;
@@ -152,8 +150,6 @@ body {
         right: 35px;
     }
 }
-
-
 
 .container2 {
     background: rgba(113, 201, 206, 0.6);
@@ -323,7 +319,6 @@ body {
     left: 62.5%;
 }
 
-
 .guamusang2 {
     position: absolute;
     left: 38.5%;
@@ -347,105 +342,6 @@ body {
     left: 62.5%;
 }
 
-@media screen and (max-width: 800px) {
-    .container1 {
-        display: block;
-    }
-
-    .header {
-        width: 100%;
-    }
-
-    .face {
-        display: flex;
-        justify-content: center;
-        margin: auto;
-
-    }
-
-    .sidebar {
-        display: flex;
-        justify-content: center;
-        flex-direction: row;
-        gap: 70px;
-    }
-
-    .text1 {
-        margin: auto;
-        text-align: center;
-    }
-
-    .text1 p {
-        font-size: 36px;
-    }
-
-    .word {
-        font-size: 26px;
-    }
-
-    .topnav {
-        margin-left: 53%;
-    }
-
-    .container2 {
-        display: block;
-    }
-
-    .bigbox1 {
-        flex-direction: column;
-        margin: auto;
-    }
-
-    .bigbox2 {
-        flex-direction: column;
-        margin: auto;
-    }
-
-    .container3 {
-        height: auto;
-    }
-
-    .guabox {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .guabox img {
-        width: 50%;
-        padding: 10px;
-        margin: auto;
-        position: unset;
-    }
-
-    .boxbron {
-        display: block;
-        flex-direction: column;
-        margin: auto;
-    }
-
-    .lebron {
-        margin: auto;
-    }
-
-    .textbron p{
-        font-size: 10px;
-    }
-
-
-    .homework {
-        display: block;
-        flex-direction: column;
-        margin: auto;
-    }
-
-    .footer {
-        height: auto;
-        display: block;
-        flex-direction: column;
-        margin: auto;
-    }
-}
-
 .container4 {
     padding: 10px;
     background: rgba(113, 201, 206, 0.6);
@@ -456,7 +352,6 @@ body {
     text-align: center;
     font-size: 54px;
 }
-
 
 .container4 h3 {
     margin-top: 25%;
@@ -473,27 +368,33 @@ body {
     margin-bottom: 2%;
 }
 
-
 .textbron {
-    font-family: 'Rubik', sans-serif;
     margin-left: 4%;
-    margin-top: 6%;
-    font-size: 34px;
+    margin-top: 3%;
     font-weight: bold;
 }
 
 .textbron p {
     font-family: 'Rubik', sans-serif;
-    font-size: 34px;
+    font-size: 30px;
 }
 
-.smallbox{
-    margin-left: 4%;
-    margin-top: -12%;
+.textbron h5 {
+    font-family: 'Rubik', sans-serif;
+    font-size: 14px;
 }
 
-.smallbox p{
-  font-weight: bold;
+.textbron h3 {
+    margin-left: 1%;
+    margin-top: 15%;
+}
+
+.textbron h5 {
+    margin-left: 1%;
+}
+
+.smallbox p {
+    font-weight: bold;
 }
 
 
@@ -528,7 +429,6 @@ body {
     font-size: 30px;
     color: white;
 }
-
 
 .box6 {
     text-align: center;
@@ -575,4 +475,113 @@ body {
     color: black;
     margin-top: 15px;
     text-decoration: none;
+}
+
+@media screen and (max-width: 800px) {
+    .container1 {
+        display: block;
+    }
+
+    .header {
+        width: 100%;
+    }
+
+    .face {
+        display: flex;
+        justify-content: center;
+        margin: auto;
+    }
+
+    .sidebar {
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+        gap: 70px;
+    }
+
+    .text1 {
+        margin: auto;
+        text-align: center;
+    }
+
+    .text1 p {
+        font-size: 36px;
+    }
+
+    .word {
+        font-size: 26px;
+    }
+
+    .icon {
+        position: absolute;
+        right: 5%;
+        top:3.5%;
+    }
+
+    .container2 {
+        display: block;
+    }
+
+    .bigbox1 {
+        flex-direction: column;
+        margin: auto;
+    }
+
+    .bigbox2 {
+        flex-direction: column;
+        margin: auto;
+    }
+
+    .container3 {
+        height: auto;
+    }
+
+    .guabox {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .guabox img {
+        width: 50%;
+        padding: 10px;
+        margin: auto;
+        position: unset;
+    }
+
+    .boxbron {
+        display: block;
+        flex-direction: column;
+        margin: auto;
+    }
+
+    .lebron {
+        margin: auto;
+    }
+
+    .textbron p {
+        text-align: center;
+        font-size: 20px;
+    }
+
+    .textbron h3 {
+        font-size: 16px;
+    }
+
+    .textbron h5 {
+        font-size: 12px;
+    }
+
+
+    .homework {
+        display: block;
+        flex-direction: column;
+        margin: auto;
+    }
+
+    .footer {
+
+        flex-direction: column;
+
+    }
+
 }
